--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 	width: 100%;
 	height: 100%;
-	display: block;
+	display: flex;
 	margin: 0;
 }
 
@@ -23,22 +23,19 @@ body {
 
 .orange {
 	background-color: #EA6626;
+	height: 150px;
+	width: 150px;
 }
 
 .box {
-	height: 100%;
-	width: 25%;
-	
+	height: 100px;
+	width: 100px;
 	
 }
 
-.row {
-	display: flex;
-	height: 50%;
-	width: 100%;
+
 	
 }
-	
 
 /*
 .row {
